en/2.x/_sources/operations/vzctl.rst.txt
Vzctl Operations
----------------


Manage OpenVZ containers with ``vzctl``.

:code:`vzctl.create`
~~~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Create OpenVZ containers.

.. code:: python

    vzctl.create(ctid, template=None)

+ **ctid**: CTID of the container to create


:code:`vzctl.delete`
~~~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Delete OpenVZ containers.

.. code:: python

    vzctl.delete(ctid)

+ **ctid**: CTID of the container to delete


:code:`vzctl.mount`
~~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Mount OpenVZ container filesystems.

.. code:: python

    vzctl.mount(ctid)

+ **ctid**: CTID of the container to mount


:code:`vzctl.restart`
~~~~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Restart OpenVZ containers.

.. code:: python

    vzctl.restart(ctid, force=False)

+ **ctid**: CTID of the container to restart
+ **force**: whether to force container start


:code:`vzctl.set`
~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Set OpenVZ container details.

.. code:: python

    vzctl.set(ctid, save=True)

+ **ctid**: CTID of the container to set
+ **save**: whether to save the changes
+ **settings**: settings/arguments to apply to the container

Settings/arguments:
    these are mapped directly to ``vztctl`` arguments, eg
    ``hostname='my-host.net'`` becomes ``--hostname my-host.net``.


:code:`vzctl.start`
~~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Start OpenVZ containers.

.. code:: python

    vzctl.start(ctid, force=False)

+ **ctid**: CTID of the container to start
+ **force**: whether to force container start


:code:`vzctl.stop`
~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Stop OpenVZ containers.

.. code:: python

    vzctl.stop(ctid)

+ **ctid**: CTID of the container to stop


:code:`vzctl.unmount`
~~~~~~~~~~~~~~~~~~~~~

.. admonition:: Stateless operation
    :class: important

    This operation will always execute commands and is not idempotent.


Unmount OpenVZ container filesystems.

.. code:: python

    vzctl.unmount(ctid)

+ **ctid**: CTID of the container to unmount

